--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,6 @@
 {
     "html.format.wrapAttributes": "auto",
     "html.format.wrapLineLength": 0,
-    "printWidth": 80
+    "printWidth": 80,
+    "tabWidth": 2
 }
