--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@vue/cli": "^5.0.6",
     "fast-glob": "^3.2.11",
     "path": "^0.12.7",
     "typescript": "^4.5.4",
