--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,23 @@
 {
   "name": "clock",
   "private": true,
-  "version": "0.0.0",
-  "main": "dist/my-element.es.js",
-  "exports": {
-    ".": "./dist/my-element.es.js"
-  },
-  "types": "types/my-element.d.ts",
-  "files": [
-    "dist",
-    "types"
-  ],
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite serve",
-    "build": "tsc && vite build"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vaadin/button": "^23.1.1",
-    "@vaadin/text-field": "^23.1.1",
-    "lit": "^2.0.2"
+    "lit": "^2.2.6",
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "@vue/cli": "^5.0.6",
-    "fast-glob": "^3.2.11",
-    "path": "^0.12.7",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.52.3",
     "typescript": "^4.5.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vue-tsc": "^0.37.9"
   }
 }
