--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "lit": "^2.2.6",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuetify": "^3.0.0-beta.4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.11",
     "sass": "^1.52.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
