--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 	"dockerComposeFile": [
 		"docker-compose.yml"
 	],
+	"postCreateCommand": ".devcontainer/post-install",
 	"service": "app",
 	"workspaceFolder": "/workspace",
 	"extensions": [
