--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:bullseye
+FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:16-bullseye
 
 RUN set -x \
     && sudo apt-get update \
