--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   },
   "devDependencies": {
     "@mdi/js": "^6.7.96",
+    "@types/node": "^18.0.0",
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.52.3",
     "vite-plugin-vuetify": "^1.0.0-alpha.12"
   },
   "dependencies": {
     "@mdi/font": "^6.7.96",
-    "lit": "^2.2.6",
+    "@pinia/nuxt": "^0.1.9",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "pinia": "^2.0.14",
+    "sequelize": "^6.21.0",
     "vuetify": "^3.0.0-beta.4"
   }
 }
