Migrate to prisma

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"eamodio.gitlens",
 		"vscode-icons-team.vscode-icons",
 		"Vue.volar",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"Prisma.prisma"
 	],
 	"settings": {
 		"python.pythonPath": "/usr/local/bin/python",
