--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "reset-db": "prisma migrate reset -f && prisma db push && ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@mdi/js": "^6.7.96",
     "@types/node": "^18.0.0",
     "nuxt": "3.0.0-rc.4",
+    "prisma": "^3.15.2",
     "sass": "^1.52.3",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
     "vite-plugin-vuetify": "^1.0.0-alpha.12"
   },
   "dependencies": {
     "@mdi/font": "^6.7.96",
     "@pinia/nuxt": "^0.1.9",
-    "express": "^4.18.1",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
+    "@prisma/client": "^3.15.2",
     "pinia": "^2.0.14",
-    "sequelize": "^6.21.0",
     "vuetify": "^3.0.0-beta.4"
   }
 }
