--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -21,6 +21,10 @@ services:
       POSTGRES_DB: postgres
       POSTGRES_PASSWORD: postgres
 
+  redis:
+    image: redis:alpine
+    restart: unless-stopped
+
   pgadmin:
     container_name: pgadmin4_container
     image: dpage/pgadmin4
