--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@mdi/font": "^6.7.96",
     "@pinia/nuxt": "^0.1.9",
     "@prisma/client": "^3.15.2",
+    "connect-redis": "^6.1.3",
+    "express-session": "^1.17.3",
     "pinia": "^2.0.14",
+    "redis": "^4.1.0",
     "vuetify": "^3.0.0-beta.4"
   }
 }
