--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,5 +2,7 @@ FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:16-bullseye
 
 RUN set -x \
     && sudo apt-get update \
-    && sudo apt-get install -y iputils-ping \
+    && sudo apt-get install -y \
+    iputils-ping \
+    postgresql-client \
     && npm install --global yarn
