--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "@mdi/font": "^6.7.96",
     "@pinia/nuxt": "^0.1.9",
     "@prisma/client": "^3.15.2",
-    "connect-redis": "^6.1.3",
+    "@quixo3/prisma-session-store": "^3.1.6",
     "express-session": "^1.17.3",
     "pinia": "^2.0.14",
-    "redis": "^4.1.0",
     "vuetify": "^3.0.0-beta.4"
   }
 }
